--- a/configuration/.env.sample
+++ b/configuration/.env.sample
@@ -2,7 +2,10 @@ AOAI_APIKEY = <your key>
 AOAI_ENDPOINT = <your endpoint>
 EMBEDDING_DEPLOYMENTNAME = <your embedding deployment name>
 CHATCOMPLETION_DEPLOYMENTNAME = <your chat completion deployment name>
-COSMOS_DB_FILE_NAME = cosmosdb.json
-ADF_FILE_NAME = adf.json
-AKS_FILE_NAME = aks.json
+# COSMOS_DB_FILE_NAME = cosmosdb.json
+# ADF_FILE_NAME = adf.json
+# AKS_FILE_NAME = aks.json
+# FABRIC_FILE_NAME = fabric.json
 DB_ROOT_FOLDER = <location of your project>/feedback-ai-lens/sample-data
+AZ_SERVICE_LIST = cosmosdb,adf,aks,fabric
+
