--- a/.github/workflows/cli-release.yml
+++ b/.github/workflows/cli-release.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags:
-      - "v*.*.*"   # Trigger the workflow on version tags (e.g. v1.0.0)
+      - "v*.*.*"   # Trigger the workflow on version tags (e.g., v1.0.0)
 
 jobs:
   build:
@@ -26,11 +26,14 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build and publish for ${{ matrix.runtime }}
-        run: |
-          dotnet publish -c Release -r ${{ matrix.runtime }} --self-contained true -o ./publish/${{ matrix.runtime }}
+      - name: Build solution
+        run: dotnet build --configuration Release --no-restore
+
+      - name: Publish CLI tool for ${{ matrix.runtime }}
+        run: dotnet publish ./console/console.csproj -c Release -r ${{ matrix.runtime }} --self-contained true -o ./publish/${{ matrix.runtime }}
+
       - name: Upload artifact for ${{ matrix.runtime }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: fbl-${{ matrix.runtime }}
           path: ./publish/${{ matrix.runtime }}
