--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ ipycanvas~=0.13.3
 ipykernel~=6.29.5
 matplotlib~=3.10.0
 notebook~=7.3.2
-numpy
+numpy~=2.2.2
 openai~=1.64.0
 openpyxl~=3.1.5
 pandas~=2.2.3
+plotly~=6.0.0
 pydantic~=2.10.6
 python-dotenv~=1.0.1
